--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     </dependencies>
 
     <build>
-        <finalName>app</finalName>
+        <finalName>file-reader-app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
