reader servie depends on kafka

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,4 @@
 services:
-  file-reader-service:
-    image: file-reader-app:latest  # Replace with your built image name
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
   zookeeper:
     image: bitnami/zookeeper:latest
     container_name: zookeeper
@@ -26,3 +19,12 @@ services:
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
+  file-reader-service:
+    image: file-reader-app:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - kafka
