--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=demo
+# Kafka broker address (Use Docker service name)
+spring.kafka.bootstrap-servers=kafka:9092
+
+# Producer settings
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.acks=all  # Ensure messages are properly committed
+#spring.kafka.producer.retries=3  # Retry sending messages if failure occurs
+
+
+#Consumer (Service B)
+## Kafka broker address (Use Docker service name)
+#spring.kafka.bootstrap-servers=kafka:9092
+#
+## Consumer settings
+#spring.kafka.consumer.group-id=my-group
+#spring.kafka.consumer.auto-offset-reset=earliest  # Start from the beginning if no offset exists
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
