kafka producer integrated, basic setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-# Kafka broker address (Use Docker service name)
-spring.kafka.bootstrap-servers=kafka:9092
-
-# Producer settings
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.acks=all  # Ensure messages are properly committed
-#spring.kafka.producer.retries=3  # Retry sending messages if failure occurs
+## Kafka broker address (Use Docker service name)
+#spring.kafka.bootstrap-servers=kafka:9092
+#
+## Producer settings
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.acks=all  # Ensure messages are properly committed
+##spring.kafka.producer.retries=3  # Retry sending messages if failure occurs
 
 
 #Consumer (Service B)
