--- a/src/main/resources/other - for running in local/docker-compose.yml
+++ b/src/main/resources/other - for running in local/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   kafka:
     image: bitnami/kafka:latest
-    container_name: kafka
+    container_name: kafka-localhost
     ports:
       - "9092:9092"
     environment:
